# 3DThesis

./: BUILD.md  CITATION.bib  CMakeLists.txt  LICENSE  License.txt  README.md  Readme.docx  ThesisConfig.cmake.in  build_example.sh  make.sh  makefile
.github/workflows/: CI.yml
Source Code/: SAHTM.pro
Source Code/GUI/: CMakeLists.txt  GUI.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelwrapper.cpp  modelwrapper.h  progresscallback.h  ui_mainwindow.h
Source Code/cmd/: CMakeLists.txt  main.cpp
Source Code/core/: CMakeLists.txt  core.pro
Source Code/core/include/: data_structs.h  driver.h  ht_point.h  util.h
Source Code/core/src/: driver.cpp  ht_point.cpp  util.cpp
TestInputs/: Beam.txt  Domain.txt  IN718.txt  Output.txt  ParamInput.txt  Path.txt  Settings.txt
TestInputs-MultiBeam/: Beam.2.txt  IN718.txt  Output.txt  ParamInput.txt  Path.1.txt
TestInputs-Snapshot/: Output.txt  ParamInput.txt  Path.txt
TestInputs/Test-Mode1/: TestPath1.txt  TestSim1.txt
TestInputs/Test-Mode2/: TestPath2.txt  TestSim2.txt
TestInputs2/: Beam.txt  Domain.txt  ParamInput.txt  Settings.txt
apps/: Main.cpp
examples/: run_examples.sh
examples/snapshot/: Mode.txt  Output.txt  ParamInput.txt  Path.txt
examples/snapshot_T_hist/: Domain.txt  Output.txt  ParamInput.txt  Settings.txt
examples/solidification/: Domain.txt  Output.txt  ParamInput.txt  Settings.txt
examples/solidification_mpstats/: Domain.txt  Mode.txt  Output.txt  ParamInput.txt
examples/solidification_multibeam/: ParamInput.txt  Path.2.txt
examples/solidification_stork/: Mode.txt  Output.txt  ParamInput.txt
include/: Calc.h  DataStructs.h  Grid.h  Init.h  Melt.h  Out.h  PINT.h  Point.h  Run.h  ThesisConfig.h.cmake.in  Thesis_Core.hpp  Util.h
include/Run/: Classic.hpp  Coupled.hpp
include/impl/Calc/: Calc.cpp  Calc.h  Calc.hpp  Melt.cpp  Melt.hpp  Util.cpp  Util.h  Util.hpp
include/impl/IO/: Init.cpp  Init.hpp  Out.cpp  Out.hpp
include/impl/Modes/: ClassicTypes.cpp  ClassicTypes.hpp  Run.cpp
include/impl/Structs/: DataStructs.hpp  Grid.cpp  Grid.hpp  MpiStructs.hpp
src/: CMakeLists.txt  Calc.cpp  Calc.h  DataStructs.h  Grid.cpp  Grid.h  Init.cpp  Init.h  Main.cpp  Melt.cpp  Melt.h  MpiStructs.h  Mpi_structs.hpp  Out.cpp  Out.h  PINT.cpp  Point.cpp  Run.cpp  Run.h  ThesisConfig.h.cmakein  Util.cpp  Util.h
